third_party/move/move-compiler-v2/transactional-tests/tests/operator_eval/cmp/func_val_cmp.operator-eval-lang-1.exp
processed 7 tasks

task 0 'publish'. lines 2-42:
Error: compilation errors:
 error: unsupported language construct
  ┌─ TEMPFILE:4:16
  │
4 │     struct Work(|u64|u64) has drop;
  │                ^ Move 2 language construct is not enabled: positional fields



task 1 'run'. lines 44-44:
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}

task 2 'run'. lines 46-46:
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}

task 3 'run'. lines 48-48:
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}

task 4 'run'. lines 50-50:
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}

task 5 'run'. lines 52-52:
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}

task 6 'run'. lines 54-54:
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
